--- a/Alexa.NET.Management/Alexa.NET.Management.csproj
+++ b/Alexa.NET.Management/Alexa.NET.Management.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alexa.NET" Version="1.13.0" />
+    <PackageReference Include="Alexa.NET" Version="1.14.1-CI-20201119-145609" />
     <PackageReference Include="Refit" Version="4.7.51" />
   </ItemGroup>
 
